--- a/memorylane.html
+++ b/memorylane.html
@@ -245,7 +245,7 @@
                 <!-- Using placeholder GIFs for demonstration -->
                 <div class="slide">
                     <img
-                        src="https://picsum.photos/1000/500?random=1"
+                        src="images/IMG-20250905-WA0029.jpg"
                         alt="Memory 1"
                     />
                     <div class="slide-content">
@@ -259,7 +259,7 @@
                 </div>
                 <div class="slide">
                     <img
-                        src="https://picsum.photos/1000/500?random=2"
+                        src="images/IMG-20250905-WA0032.jpg"
                         alt="Memory 2"
                     />
                     <div class="slide-content">
@@ -272,7 +272,7 @@
                 </div>
                 <div class="slide">
                     <img
-                        src="https://picsum.photos/1000/500?random=3"
+                        src="images/IMG-20250905-WA0033.jpg"
                         alt="Memory 3"
                     />
                     <div class="slide-content">
@@ -285,7 +285,7 @@
                 </div>
                 <div class="slide">
                     <img
-                        src="https://picsum.photos/1000/500?random=4"
+                        src="images/IMG-20250905-WA0035.jpg"
                         alt="Memory 4"
                     />
                     <div class="slide-content">
@@ -298,7 +298,7 @@
                 </div>
                 <div class="slide">
                     <img
-                        src="https://picsum.photos/1000/500?random=5"
+                        src="images/IMG-20250905-WA0037 (1).jpg"
                         alt="Memory 5"
                     />
                     <div class="slide-content">
@@ -342,7 +342,7 @@
             "
         >
             <img
-                src="https://picsum.photos/1000/500?random=6"
+                src="images/IMG-20250905-WA0037.jpg"
                 alt="Floating memory"
             />
             <p>Remember this?</p>
@@ -358,7 +358,7 @@
             "
         >
             <img
-                src="https://picsum.photos/1000/500?random=7"
+                src="images/IMG-20250905-WA0029.jpg"
                 alt="Floating memory"
             />
             <p>Good times!</p>
@@ -374,7 +374,7 @@
             "
         >
             <img
-                src="https://picsum.photos/1000/500?random=8"
+                src="images/IMG-20250905-WA0032.jpg"
                 alt="Floating memory"
             />
             <p>Unforgettable!</p>
@@ -390,7 +390,7 @@
             "
         >
             <img
-                src="https://picsum.photos/1000/500?random=9"
+                src="images/IMG-20250905-WA0033.jpg"
                 alt="Floating memory"
             />
             <p>Love this one!</p>
