--- a/memorylane.html
+++ b/memorylane.html
@@ -244,10 +244,7 @@
             <div class="slides" id="slides">
                 <!-- Using placeholder GIFs for demonstration -->
                 <div class="slide">
-                    <img
-                        src="images/IMG-20250905-WA0029.jpg"
-                        alt="Memory 1"
-                    />
+                    <img src="images/IMG-20250905-WA0029.jpg" alt="Memory 1" />
                     <div class="slide-content">
                         <h3>Our First Adventure</h3>
                         <p>
@@ -258,10 +255,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <img
-                        src="images/IMG-20250905-WA0032.jpg"
-                        alt="Memory 2"
-                    />
+                    <img src="images/IMG-20250905-WA0032.jpg" alt="Memory 2" />
                     <div class="slide-content">
                         <h3>Beach Sunset</h3>
                         <p>
@@ -271,10 +265,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <img
-                        src="images/IMG-20250905-WA0033.jpg"
-                        alt="Memory 3"
-                    />
+                    <img src="images/IMG-20250905-WA0033.jpg" alt="Memory 3" />
                     <div class="slide-content">
                         <h3>Cozy Winter Days</h3>
                         <p>
@@ -284,10 +275,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <img
-                        src="images/IMG-20250905-WA0035.jpg"
-                        alt="Memory 4"
-                    />
+                    <img src="images/IMG-20250905-WA0035.jpg" alt="Memory 4" />
                     <div class="slide-content">
                         <h3>Celebration Time</h3>
                         <p>
@@ -297,10 +285,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <img
-                        src="images/IMG-20250905-WA0037 (1).jpg"
-                        alt="Memory 5"
-                    />
+                    <img src="images/IMG-20250905-WA0037.jpg" alt="Memory 5" />
                     <div class="slide-content">
                         <h3>Just Us</h3>
                         <p>
@@ -341,10 +326,7 @@
                 transform: rotate(-5deg);
             "
         >
-            <img
-                src="images/IMG-20250905-WA0037.jpg"
-                alt="Floating memory"
-            />
+            <img src="images/IMG-20250905-WA0037.jpg" alt="Floating memory" />
             <p>Remember this?</p>
         </div>
 
@@ -357,10 +339,7 @@
                 transform: rotate(5deg);
             "
         >
-            <img
-                src="images/IMG-20250905-WA0029.jpg"
-                alt="Floating memory"
-            />
+            <img src="images/IMG-20250905-WA0029.jpg" alt="Floating memory" />
             <p>Good times!</p>
         </div>
 
@@ -373,10 +352,7 @@
                 transform: rotate(8deg);
             "
         >
-            <img
-                src="images/IMG-20250905-WA0032.jpg"
-                alt="Floating memory"
-            />
+            <img src="images/IMG-20250905-WA0032.jpg" alt="Floating memory" />
             <p>Unforgettable!</p>
         </div>
 
@@ -389,10 +365,7 @@
                 transform: rotate(-8deg);
             "
         >
-            <img
-                src="images/IMG-20250905-WA0033.jpg"
-                alt="Floating memory"
-            />
+            <img src="images/IMG-20250905-WA0033.jpg" alt="Floating memory" />
             <p>Love this one!</p>
         </div>
 
