--- a/songs.html
+++ b/songs.html
@@ -239,64 +239,13 @@
                 <ul class="playlist">
                     <li
                         class="playlist-item"
-                        data-song="https://cdnjs.cloudflare.com/ajax/libs/ion-sound/3.0.7/sounds/bell_ring.mp3"
+                        data-song="https://youtubemp3.to/download/bpOSxM0rNPM/320"
                     >
                         <span class="song-number">1</span>
                         <div class="song-info">
-                            <div class="song-title">Our First Dance</div>
+                            <div class="song-title">I Wanna Be Yours</div>
                             <div class="song-description">
-                                Remember when we first danced to this song under
-                                the stars?
-                            </div>
-                        </div>
-                    </li>
-                    <li
-                        class="playlist-item"
-                        data-song="https://cdnjs.cloudflare.com/ajax/libs/ion-sound/3.0.7/sounds/glass.mp3"
-                    >
-                        <span class="song-number">2</span>
-                        <div class="song-info">
-                            <div class="song-title">Road Trip Anthem</div>
-                            <div class="song-description">
-                                We played this on repeat during our road trip
-                                last summer!
-                            </div>
-                        </div>
-                    </li>
-                    <li
-                        class="playlist-item"
-                        data-song="https://cdnjs.cloudflare.com/ajax/libs/ion-sound/3.0.7/sounds/water_droplet.mp3"
-                    >
-                        <span class="song-number">3</span>
-                        <div class="song-info">
-                            <div class="song-title">Our Special Song</div>
-                            <div class="song-description">
-                                The one that always makes us both smile and
-                                think of each other.
-                            </div>
-                        </div>
-                    </li>
-                    <li
-                        class="playlist-item"
-                        data-song="https://cdnjs.cloudflare.com/ajax/libs/ion-sound/3.0.7/sounds/button_click.mp3"
-                    >
-                        <span class="song-number">4</span>
-                        <div class="song-info">
-                            <div class="song-title">Birthday Celebration</div>
-                            <div class="song-description">
-                                A perfect song to celebrate your special day!
-                            </div>
-                        </div>
-                    </li>
-                    <li
-                        class="playlist-item"
-                        data-song="https://cdnjs.cloudflare.com/ajax/libs/ion-sound/3.0.7/sounds/snap.mp3"
-                    >
-                        <span class="song-number">5</span>
-                        <div class="song-info">
-                            <div class="song-title">Late Night Vibes</div>
-                            <div class="song-description">
-                                Our favorite for those quiet evenings together.
+                                By Arctic Monkeys
                             </div>
                         </div>
                     </li>
