--- a/cake.html
+++ b/cake.html
@@ -301,9 +301,9 @@
                 >
                     Back to Memories
                 </button>
-                <button class="btn" onclick="window.location.href='songs.html'">
+                <!--<button class="btn" onclick="window.location.href='songs.html'">
                     Go to Songs
-                </button>
+                </button>-->
             </div>
         </div>
 
