Fix audio playback issue

--- a/songs.html
+++ b/songs.html
@@ -239,7 +239,7 @@
                 <ul class="playlist">
                     <li
                         class="playlist-item"
-                        data-song="https://youtubemp3.to/download/bpOSxM0rNPM/320"
+                        data-song="audio/I-Wanna-Be-Yours.mp3"
                     >
                         <span class="song-number">1</span>
                         <div class="song-info">
