--- a/cake.html
+++ b/cake.html
@@ -33,7 +33,7 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                overflow: hidden;
+                overflow: auto;
                 position: relative;
                 background-size: 400% 400%;
                 animation: gradientShift 15s ease infinite;
